# Urgon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: cnd2obj.md  cnd2obj_v2.79.md  cndtool.md  matool.md
libraries/: CMakeLists.txt
libraries/cmdutils/: CMakeLists.txt  cmdutils.h  options.h
libraries/imfixes/: CMakeLists.txt  cogscript_fixes.h
libraries/libim/: CMakeLists.txt  common.h  gob.h  platform.h
libraries/libim/content/asset/: asset.h
libraries/libim/content/asset/animation/: animation.h  key_marker.h  key_node.h  key_node_entry.h
libraries/libim/content/asset/animation/impl/: animation_reader.cpp  animation_writer.cpp
libraries/libim/content/asset/animation/unittest/: anim_test.cpp  anim_test.h  test_vector.key  test_vector_no_markers.key
libraries/libim/content/asset/cog/: cog.h  cogmessage_type.h  cogscript.h  cogsymbol.h  cogsymbol_value.h  cogvtable.h
libraries/libim/content/asset/cog/impl/: cogscript.cpp
libraries/libim/content/asset/cog/impl/grammer/: parse_utils.h  parser.cpp  parser.h
libraries/libim/content/asset/material/: bmp.h  colorformat.h  material.h  texture.h  texture_view.h  texutils.h
libraries/libim/content/asset/material/impl/: bmp.h  material.cpp  texture.cpp  texture_view.cpp  texutils.cpp
libraries/libim/content/asset/material/impl/serialization/: mat.cpp  mat_ser_helpers.h  mat_structs.h
libraries/libim/content/asset/primitives/: box.h  face.h  geomode.h  light_mode.h
libraries/libim/content/asset/thing/: actor.h  collide.h  damage_type.h  explosion.h  item.h  particle.h  thing.h  weapon.h
libraries/libim/content/asset/thing/movement/: pathinfo.h  physicsinfo.h
libraries/libim/content/asset/world/: georesource.h  sector.h  surface.h  surface_adjoin.h
libraries/libim/content/asset/world/impl/serialization/: world_ser_common.h
libraries/libim/content/asset/world/impl/serialization/cnd/: cnd.cpp  cnd.h  cnderror.h  cndstring.h  crn.h
libraries/libim/content/asset/world/impl/serialization/cnd/animation/: cnd_key_structs.h  cnd_section_keyframes.cpp
libraries/libim/content/asset/world/impl/serialization/cnd/georesource/: cnd_adjoin.h  cnd_section_georesource.cpp  cnd_surface.h
libraries/libim/content/asset/world/impl/serialization/cnd/material/: cnd_mat_header.h  cnd_section_materials.cpp
libraries/libim/content/asset/world/impl/serialization/cnd/sector/: cnd_section_sectors.cpp  cnd_sector.h
libraries/libim/content/asset/world/impl/serialization/cnd/sound/: cnd_section_sounds.cpp  cnd_sound_header.h
libraries/libim/content/asset/world/impl/serialization/cnd/thing/: cnd_section_things.cpp  cnd_thing.h
libraries/libim/content/asset/world/impl/serialization/ndy/: ndy.cpp  ndy.h  ndy_section_cogs.cpp  ndy_section_georesource.cpp  ndy_section_sectors.cpp
libraries/libim/content/asset/world/impl/serialization/ndy/thing/: ndy_section_things.cpp  ndy_thing_iser.h  ndy_thing_oser.h  ndy_thing_ser_common.h  ndy_thing_wser_helpers.h
libraries/libim/content/audio/: sound.h  soundbank.h
libraries/libim/content/audio/impl/: indywv.h  sbtrack.h  sound.cpp  sound_data.h  sound_ser_helper.h  soundbank.cpp  soundcache.h  wav.h
libraries/libim/content/audio/impl/serialization/: indywv.h  sound_ser_helper.h  soundbank_serializer.h  soundinfo.h  wav.h
libraries/libim/content/text/: font_atlas.h  gradiantcolor.h  gradientcolor.h  text_resource_reader.h  text_resource_writer.h
libraries/libim/content/text/impl/: gradientcolor.cpp  text_resource_literals.h  text_resource_reader.cpp  text_resource_writer.cpp
libraries/libim/io/: binarystream.h  filestream.h  stream.h  stremerror.h  vfs.h  vfstream.h
libraries/libim/io/impl/: binarystream.impl  filestream.cpp  gob.cpp  iobuffer.h  vfs.cpp
libraries/libim/io/unittest/: binarystream_test.cpp  binarystream_test.h
libraries/libim/log/: log.h  log_level.h
libraries/libim/math/: abstract_vector.h  box.h  color.h  fmath.h  math.h  rotator.h  size.h  vector.h  vector2.h  vector3.h  vector4.h
libraries/libim/math/impl/: color.cpp
libraries/libim/text/: diagnostic_location.h  parselocation.h  syntax_error.h  token.h  tokenizer.h
libraries/libim/text/impl/: tokenizer.cpp  tokenizer_p.h
libraries/libim/types/: fixed_string.h  flag.h  flags.h  hashmap.h  indexmap.h  optref.h  safe_cast.h  sharedref.h  string_map.h  typemask.h
libraries/libim/utils/: function_traits.h  hashmap.h  sharedref.h  traits.h  typemask.h  utils.h
programs/: CMakeLists.txt
programs/cndtool/: CMakeLists.txt  README.md  cnd.h  cndtoolargs.h  config.h.in  main.cpp  ndy.h  obj.h  patch.h  resource.h
programs/gobext/: CMakeLists.txt  README.md  config.h.in  main.cpp
programs/matool/: CMakeLists.txt  README.md  config.h.in  main.cpp  matoolargs.h  utils.h
scripts/: make_release.sh  mingw-w64-i686.cmake
src/cmdutils/: options.h
src/cndext/: main.cpp
src/cndtool/: cndtoolargs.h  main.cpp  patch.h
src/gobext/: main.cpp
src/libim/: cnd.cpp  cnd.h  common.h  gob.h
src/libim/content/asset/: asset.h
src/libim/content/asset/animation/: animation.h  animation_node.h  key_marker.h  keyframe.h
src/libim/content/asset/cog/: cogmessage_type.h  cogvtable.h
src/libim/content/asset/material/: bmp.h  (+2 more)
src/libim/content/audio/: sound.h  soundbank.h  soundbank_error.h
src/libim/content/text/: text_resource_reader.h  text_resource_writer.h
src/libim/io/: binarystream.h  filestream.cpp  filestream.h  stream.h  stremerror.h
src/libim/io/impl/: binarystream.impl  filestream.cpp
src/libim/io/unittest/: binarystream_test.h
src/libim/log/: log.h
src/libim/material/: bmp.h  colorformat.h  mat.h  material.h  texture.h
src/libim/math/: abstract_vector.h  box.h  color.h  math.h  rotator.h  vector.h  vector2.h  vector3.h  vector4.h
src/libim/text/: diagnostic_location.h  resource_reader.h  token.h  tokenizer.h  tokenizer_error.h
src/libim/text/impl/: resource_literals.h  resource_reader.cpp  schars.h  tokenizer.cpp  tokenizer_p.h
src/libim/utils/: flag.h  hashmap.h  sharedref.h  traits.h  utils.h
src/test/: test.cpp
tests/: CMakeLists.txt  test.cpp
(+48 files in other folders)
