file(GLOB_RECURSE
    CMDUTILS_HEADER_FILES
    "*.h"
    [FOLLOW_SYMLINKS]
)

file(GLOB_RECURSE
    CMDUTILS_SRC_FILES
    "*.cpp"
    [FOLLOW_SYMLINKS]
)

add_library(${PM_LIBCMD} OBJECT
    ${CMDUTILS_HEADER_FILES}
    ${CMDUTILS_SRC_FILES}
)
set_target_properties(${PM_LIBCMD} PROPERTIES LINKER_LANGUAGE CXX)
